--- a/src/web/views/sites/builder/index.ejs
+++ b/src/web/views/sites/builder/index.ejs
@@ -23,9 +23,19 @@
 <div id="right-sidebar">
     <h2>Settings</h2>
     <div id="settings-panel">
+        <button id="saveBlocks">SAVE CHANGES</button>
         <!-- Block settings will be loaded here -->
     </div>
 </div>
 <script src="/builder/script.js"></script>
+<script>
+    const btn = document.querySelector("#saveBlocks");
+    const dropArea = document.querySelector("#drop-area");
+
+    btn.addEventListener("click", (e)=>{
+      e.preventDefault();
+      dropArea.
+    })
+</script>
 </body>
 </html>
