--- a/src/web/views/sites/admin/main.ejs
+++ b/src/web/views/sites/admin/main.ejs
@@ -2,8 +2,26 @@
 <head>
     <title><%= siteName %></title>
     <link rel="stylesheet" href="/builder/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    Admin panel
+    <div class="container text-center">
+      <h1 class="mt-5 mb-5">Admin panel</h1>
+        <div class="row">
+            <% modules.forEach((a) => { %>
+                <div class="col-sm-3 mb-4 text-start">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title"><%= a.name %></h5>
+                            <p class="card-text"><%= a.description %></p>
+                            <a href="<%= a.link %>" class="btn btn-primary">Module</a>
+                        </div>
+                    </div>
+                </div>
+            <% }) %>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
