--- a/src/web/views/sites/admin/main.ejs
+++ b/src/web/views/sites/admin/main.ejs
@@ -3,10 +3,18 @@
     <title><%= siteName %></title>
     <link rel="stylesheet" href="/builder/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <div class="container text-center">
-      <h1 class="mt-5 mb-5">Admin panel</h1>
+        <div class="row mt-5 mb-5">
+            <div class="col-sm-9 text-start">
+                <h1>Admin panel</h1>
+            </div>
+            <div class="col-sm-3 text-end">
+                <a class="btn btn-primary fs-4" href="/admin/logout" role="button"><i class="bi bi-box-arrow-right"></i></a>
+            </div>
+        </div>
         <div class="row">
             <% modules.forEach((a) => { %>
                 <div class="col-sm-3 mb-4 text-start">
