--- a/src/web/views/sites/admin/users/index.ejs
+++ b/src/web/views/sites/admin/users/index.ejs
@@ -3,6 +3,20 @@
     <title><%= siteName %></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <style>
+        i {
+            pointer-events: none;
+        }
+
+        .noselect {
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
+    </style>
 </head>
 <body>
 <div class="container text-center">
@@ -30,7 +44,7 @@
                                 <% }else{ %>
                                         <button class="btn btn-secondary btn-sm fs-6 noselect" data-action="regen:<%=user.username%>"><i class="bi bi-arrow-repeat"></i></button>
                                 <% } %>
-                                <button class="btn btn-danger btn-sm fs-6 noselect"><i class="bi bi-x-lg"></i></button>
+                                <button class="btn btn-danger btn-sm fs-6 noselect" data-action="delete:<%=user.username%>"><i class="bi bi-x-lg"></i></button>
                             </div>
                             <span class="position-absolute top-50 start-100 translate-middle p-2 <%= user.verified === 1 ? "bg-success" : "bg-danger"%> border border-light rounded-circle">
                                 <span class="visually-hidden">verified</span>
@@ -75,6 +89,15 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script>
+  const refrshAdminUsers = function(){
+    fetch("http://localhost:3000/api/v1/users/refresh",{
+      method: "POST",
+      headers: {
+        "Content-Type": 'application/json',
+      },
+    })
+      .then(raw => {location.reload()})
+  }
     const refreshButton = document.querySelector("#refreshUsers")
     const newUserForm = document.querySelector("#newUserForm")
     const saveUserBtn = document.querySelector("#saveUserBtn")
@@ -84,12 +107,52 @@
     regenBtns.forEach(btn => btn.addEventListener('click', actionButton))
 
     function actionButton(btn){
-      let [action, username] = btn.data.action.split(":");
+      let button = btn.target
+      console.log(button)
+      let [action, username] = button.dataset.action.split(":");
       if(action==="change"){
-
+        let newPass = prompt("Provide new password")
+        fetch('http://localhost:3000/api/v1/users/password/change',{
+          method: 'POST',
+          headers: {
+            "Content-Type": 'application/json',
+          },
+          body: JSON.stringify({username: username, password: newPass})
+        })
+          .then(raw => raw.json())
+          .then(data => {
+            console.log(data)
+            alertArea.replaceWith(createAlert(data.success, data.message))
+          })
+      }else if (action==="delete"){
+        fetch('http://localhost:3000/api/v1/users/',{
+          method: 'DELETE',
+          headers: {
+            "Content-Type": 'application/json',
+          },
+          body: JSON.stringify({username: username})
+        })
+          .then(raw => raw.json())
+          .then(data => {
+            console.log(data);
+            alertArea.replaceWith(createAlert(data.success, data.message))
+          })
       }else{
-
+        fetch('http://localhost:3000/api/v1/users/password/regen',{
+          method: 'POST',
+          headers: {
+            "Content-Type": 'application/json',
+          },
+          body: JSON.stringify({username: username})
+        })
+          .then(raw => raw.json())
+          .then(data => {
+            console.log(data);
+            alertArea.replaceWith(createAlert(data.success, data.message))
+          })
       }
+      refrshAdminUsers()
+      location.reload()
     }
 
     function createAlert(success, message){
@@ -97,7 +160,7 @@
       newAlert.role = "alert"
       if(success) {
         newAlert.classList.add("alert", "alert-success");
-        newAlert.innerHTML = "User created!"
+        newAlert.innerHTML = message
       }
       else {
         newAlert.classList.add("alert", "alert-danger");
@@ -132,15 +195,7 @@
         })
     })
 
-    refreshButton.addEventListener("click", ()=>{
-      fetch("http://localhost:3000/api/v1/users/refresh",{
-        method: "POST",
-        headers: {
-          "Content-Type": 'application/json',
-        },
-      })
-        .then(raw => {location.reload()})
-    })
+    refreshButton.addEventListener("click", refrshAdminUsers)
 </script>
 </body>
 </html>
