--- a/src/web/views/sites/admin/builder/index.ejs
+++ b/src/web/views/sites/admin/builder/index.ejs
@@ -5,75 +5,83 @@
     <link rel="stylesheet" href="/builder/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-    #saveBlocks {
-    background-color: #4CAF50; /* Zielone tło */
-    color: white; /* Biały tekst */
-    border: 2px solid #4CAF50; /* Zielona ramka */
-    padding: 10px 20px;
-    transition: all 0.3s ease;
-}
+        #left-sidebar {
+        background-image: linear-gradient(to right, #6a11cb 10%, #799fe0 60%); /* Gradient od jasnoniebieskiego do nieco ciemniejszego niebieskiego */
+    }
 
-    #saveBlocks:hover {
-    background-color: white; /* Białe tło podczas hoverowania */
-    color: #4CAF50; /* Zielony tekst */
-    border-color: #388E3C; /* Ciemniejsza zielona ramka */
-}
-      body {
-          background: linear-gradient(to right, #6a11cb 10%, #2575fc 60%);
-      }
-  
-      .header-row {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-      }
-  
-      .header-title {
-          flex-grow: 1;
-          text-align: center;
-      }
-  
-      h1 {
-          font-size: 3.5em;
-      }
-  
-      img {
-          margin-right: 10px;
-      }
+    #right-sidebar {
+        background-image: linear-gradient(to right, #799fe0 10%, #1f6bef 40%); /* Gradient od jasnopomarańczowego do ciemniejszego pomarańczowego */
+    }
 
-      .header-row .text-end > div {
-          color: #000000;
-          margin-bottom: 5px;
-          font-weight: bold;
-          font-size: 16px;
-      }
-
-      .draggable {
-          cursor: grab;
-      }
-
-      .droppable {
-          border: 2px dashed #ccc;
-          min-height: 100px;
-      }
-
-      /* Dodane style dla left-sidebar */
-          left-sidebar h2, #left-sidebar li {
-          border: 2px solid #000000; /* Zielona ramka */
-          padding: 5px;
-          margin-bottom: 5px;
-      }
-      
-      #left-sidebar h2 {
-          background-color: #e8f5e9; /* Jasnozielone tło */
-      }
-      
-      #left-sidebar li {
-          background-color: #f1f8e9; /* Bardziej delikatne tło dla elementów listy */
-      }
-  </style>
+    #main-content {
+        background-image: linear-gradient(to right, #799fe0 10%, #799fe0 10%); /* Gradient od jasnozielonego do ciemniejszego zielonego */
+    }
+    
+        /* Pozostałe style */
+        #saveBlocks {
+            background-color: #4CAF50; /* Zielone tło */
+            color: white; /* Biały tekst */
+            border: 2px solid #4CAF50; /* Zielona ramka */
+            padding: 10px 20px;
+            transition: all 0.3s ease;
+        }
+    
+        #saveBlocks:hover {
+            background-color: white; /* Białe tło podczas hoverowania */
+            color: #4CAF50; /* Zielony tekst */
+            border-color: #388E3C; /* Ciemniejsza zielona ramka */
+        }
+    
+        .header-row {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+    
+        .header-title {
+            flex-grow: 1;
+            text-align: center;
+        }
+    
+        h1 {
+            font-size: 3.5em;
+            text-align: center;
+        }
+    
+        img {
+            margin-right: 10px;
+        }
+    
+        .header-row .text-end > div {
+            color: #000000;
+            margin-bottom: 5px;
+            font-weight: bold;
+            font-size: 16px;
+        }
+    
+        .draggable {
+            cursor: grab;
+        }
+    
+        .droppable {
+            border: 6px dashed #ccc;
+            min-height: 2px;
+        }
+    
+        #left-sidebar h2, #left-sidebar li {
+            text-align: center;
+            padding: 5px;
+            margin-bottom: 5px;
+        }
+    
+        #left-sidebar li {
+            background-color: #f1f8e9; /* Bardziej delikatne tło dla elementów listy */
+        }
+    </style>
+    
 </head>
 <body>
+ 
 <div id="left-sidebar">
     <h2>Available Blocks</h2>
     <ul>
