--- a/src/web/views/sites/admin/main.ejs
+++ b/src/web/views/sites/admin/main.ejs
@@ -36,6 +36,15 @@
             font-weight: bold;
             font-size: 16px; /* Ustawienie rozmiaru czcionki na 16px */
         }
+    .custom-update-btn {
+        background-color: #4CAF50; /* Zielone tło */
+        border-color: #4CAF50; /* Zielona ramka */
+        color: white; /* Biały tekst */
+    }
+    .custom-update-btn:hover {
+        background-color: #45a049; /* Ciemniejszy odcień zielonego dla hover */
+        border-color: #45a049;
+    }
     </style>
 
     <div class="container text-center">
@@ -48,7 +57,7 @@
             </div>
             <div class="col-auto text-end">
                 <div>Logout</div>
-                <a class="btn btn-primary fs-4" href="/admin/logout" role="button">
+                <a class="btn custom-update-btn" href="/admin/logout" role="button">
                     <i class="bi bi-box-arrow-right"></i>
                 </a>
             </div>
