--- a/src/web/views/sites/admin/settings/index.ejs
+++ b/src/web/views/sites/admin/settings/index.ejs
@@ -3,6 +3,20 @@
     <title><%= siteName %></title>
     <link rel="stylesheet" href="/settings/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        body {
+            background-image: linear-gradient(to right, #6a11cb, #2575fc); /* Gradient od fioletowego do niebieskiego */
+        }
+        .custom-update-btn {
+        background-color: #4CAF50; /* Zielone tło */
+        border-color: #4CAF50; /* Zielona ramka */
+        color: white; /* Biały tekst */
+    }
+    .custom-update-btn:hover {
+        background-color: #45a049; /* Ciemniejszy odcień zielonego dla hover */
+        border-color: #45a049;
+    }
+    </style>
 </head>
 <body>
 <div class="container text-center">
@@ -21,7 +35,7 @@
                 <div id="siteNameHelp" class="form-text">Something</div>
             </div>
             <div class="col align-self-end text-end">
-                <button id="settingsSubmit" type="submit" class="btn btn-primary" >Update</button>
+                <button id="settingsSubmit" type="submit" class="btn custom-update-btn" >Update</button>
             </div>
         </div>
     </form>
