--- a/src/web/views/sites/admin/settings/index.ejs
+++ b/src/web/views/sites/admin/settings/index.ejs
@@ -26,7 +26,7 @@
 </head>
 <body>
     <div class="container text-center">
-        <h1>settings</h1>
+        <h1>Settings</h1>
         <p id="result"></p>
         <form id="settingsForm" onsubmit="return false;">
             <div class="row g-3 align-items-center">
