--- a/src/web/views/sites/blog/post.ejs
+++ b/src/web/views/sites/blog/post.ejs
@@ -5,15 +5,29 @@
   <meta name='description' content='<%= post.description %>'>
   <meta name='author' content='<%= post.author %>'>
   <link rel="stylesheet" href="/main/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
 <div class="container mt-5">
-  <h1><%= siteName %> - <%= post.title %></h1>
-  <pre>
-    <%= JSON.stringify(post, null, 2) %>
-  </pre>
+  <div class="row">
+    <div class="col-lg-8">
+      <article>
+        <header class="mb-4">
+          <h1><%= siteName %> - <%= post.title %></h1>
+          <div class="text-muted fst-italic mb-2">
+            Posted on <%= post.formattedDate %> by <%= post.author %>
+          </div>
+        </header>
+        <figure class="mb-4">
+          <img src="<%= post.image %>" alt="<%= post.link +"-image"%>" class="img-fluid rounded">
+        </figure>
+        <section class="mb-5">
+          <%- post.text %>
+        </section>
+      </article>
+    </div>
+  </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
