add home + blog module

--- a/src/web/views/sites/admin/main.ejs
+++ b/src/web/views/sites/admin/main.ejs
@@ -74,6 +74,24 @@
                     </div>
                 </div>
             <% }) %>
+            <div class="col-sm-3 mb-4 text-start">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Home</h5>
+                        <p class="card-text">See your website</p>
+                        <a href="http://localhost:3000/" class="btn btn-primary">Module</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3 mb-4 text-start">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Blog</h5>
+                        <p class="card-text">See your blog</p>
+                        <a href="http://localhost:3000/blog" class="btn btn-primary">Module</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
