--- a/src/web/views/sites/admin/main.ejs
+++ b/src/web/views/sites/admin/main.ejs
@@ -57,7 +57,7 @@
             </div>
             <div class="col-auto text-end">
                 <div>Logout</div>
-                <a class="btn custom-update-btn" href="/admin/logout" role="button">
+                <a class="btn btn-danger" href="/admin/logout" role="button">
                     <i class="bi bi-box-arrow-right"></i>
                 </a>
             </div>
