--- a/src/web/views/sites/blog/main.ejs
+++ b/src/web/views/sites/blog/main.ejs
@@ -2,14 +2,17 @@
 <head>
   <title><%= siteName %></title>
   <link rel="stylesheet" href="/main/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
 <div class="container text-center">
   <div class="row mb-5">
     <div class="col-12">
       <h1><%= siteName %> - Blog</h1>
+      <!-- Przycisk powrotu na stronę admina -->
+      <a href="http://localhost:3000/admin" class="btn btn-primary">back <i class="bi bi-box-arrow-left"></i></a>
+      
     </div>
   </div>
   <div class="row">
