--- a/src/web/views/sites/admin/builder/index.ejs
+++ b/src/web/views/sites/admin/builder/index.ejs
@@ -77,6 +77,23 @@
         #left-sidebar li {
             background-color: #f1f8e9; /* Bardziej delikatne tło dla elementów listy */
         }
+        .custom-btn {
+        background-color: #4CAF50; /* Zielone tło */
+        color: white; /* Biały tekst */
+        border: 2px solid #4CAF50; /* Zielona ramka */
+        padding: 10px 20px;
+        transition: all 0.3s ease;
+        display: block; /* Aby przyciski zajmowały całą dostępną szerokość */
+        width: 100%;
+        text-align: center; /* Wycentrowanie tekstu na przycisku */
+        margin-top: 10px; /* Dodaje margines na górze przycisku */
+    }
+
+    .custom-btn:hover {
+        background-color: white; /* Białe tło podczas hoverowania */
+        color: #4CAF50; /* Zielony tekst */
+        border-color: #388E3C; /* Ciemniejsza zielona ramka */
+    }
     </style>
     
 </head>
@@ -101,8 +118,8 @@
 <div id="right-sidebar">
     <h2>Settings</h2>
     <div id="settings-panel">
-        <button id="saveBlocks">SAVE CHANGES</button>
-        <!-- Block settings will be loaded here -->
+        <button id="saveBlocks" class="custom-btn">SAVE CHANGES</button>
+        <a href="http://localhost:3000/admin" class="btn custom-btn">BACK</a>
     </div>
 </div>
 <script src="/builder/script.js"></script>
