back button snipets, users, settings

--- a/src/web/views/sites/admin/settings/index.ejs
+++ b/src/web/views/sites/admin/settings/index.ejs
@@ -43,6 +43,9 @@
                 <div class="col align-self-end text-end">
                     <button id="settingsSubmit" type="submit" class="btn custom-update-btn" >Update</button>
                 </div>
+                <div class="text-end">
+                    <a href="/admin" class="btn custom-update-btn">Back</a>
+                </div>
             </div>
         </form>
     </div>
