--- a/src/web/views/sites/admin/snippets/index.ejs
+++ b/src/web/views/sites/admin/snippets/index.ejs
@@ -22,7 +22,10 @@
 
             <form id="snippets-form">
                 <div class="mb-3">
-                    <button type="submit" class="btn btn-primary">Save</button>
+                    <button type="submit" class="btn btn-success">Save</button>
+                </div>
+                <div class="mb-3">
+                    <a href="/admin" class="btn btn-success">Back</a>
                 </div>
 
                 <div class="mb-3">
