--- a/src/web/views/sites/admin/users/index.ejs
+++ b/src/web/views/sites/admin/users/index.ejs
@@ -19,17 +19,29 @@
             -ms-user-select: none;
             user-select: none;
         }
+        .custom-update-btn {
+        background-color: #4CAF50; /* Zielone tło */
+        border-color: #4CAF50; /* Zielona ramka */
+        color: white; /* Biały tekst */
+    }
+    .custom-update-btn:hover {
+        background-color: #45a049; /* Ciemniejszy odcień zielonego dla hover */
+        border-color: #45a049;
+    }
     </style>
 </head>
 <body>
 <div class="container text-center">
     <h1><%= siteName %> - Users</h1>
     <div class="row justify-content-center">
-        <div class="col-4 mb-5 mt-5 align-self-center">
+        <div class="col-2 mb-5 mt-5 align-self-center">
             <button id="refreshUsers" type="submit" class="btn btn-secondary">Refresh</button>
         </div>
-        <div class="col-4 mb-5 mt-5 align-self-center">
-            <button id="addUsers" type="submit" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">Add user</button>
+        <div class="col-2 mb-5 mt-5 align-self-center">
+          <a href="/admin" class="btn custom-update-btn">Back</a>
+      </div>
+        <div class="col-2 mb-5 mt-5 align-self-center">
+            <button id="addUsers" type="submit" class="btn custom-update-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Add user</button>
         </div>
     </div>
     <div id="alertsArea"></div>
