back button posts

--- a/src/web/views/sites/admin/posts/index.ejs
+++ b/src/web/views/sites/admin/posts/index.ejs
@@ -30,8 +30,10 @@
     <textarea id="editor" name="editor" class="mb-3">
         New post
     </textarea>
-
-    <button type="submit" class="btn btn-primary mt-3">Submit</button>
+    <div class="d-grid gap-2 col-2 mx-auto">
+      <button type="submit" class="btn btn-primary mt-3">Submit</button>
+      <a href="/admin" class="btn btn-success">Back</a>
+    </div>
 </form>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 <script>
