--- a/src/web/views/sites/admin/main.ejs
+++ b/src/web/views/sites/admin/main.ejs
@@ -8,7 +8,7 @@
 <body>
     <style>
         body {
-            background: linear-gradient(to right, #6a11cb 10%, #2575fc 60%); /* Przykład gradientowego tła */
+            background-color: #D0D9FF; /* Dodanie jasnoniebieskiego tła dla całej strony */
         }
     
         .header-row {
