--- a/src/web/views/sites/admin/builder/index.ejs
+++ b/src/web/views/sites/admin/builder/index.ejs
@@ -6,15 +6,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         #left-sidebar {
-        background-image: linear-gradient(to right, #6a11cb 10%, #799fe0 60%); /* Gradient od jasnoniebieskiego do nieco ciemniejszego niebieskiego */
+            background-color: #D0D9FF; /* Gradient od jasnoniebieskiego do nieco ciemniejszego niebieskiego */
     }
 
     #right-sidebar {
-        background-image: linear-gradient(to right, #799fe0 10%, #1f6bef 40%); /* Gradient od jasnopomarańczowego do ciemniejszego pomarańczowego */
+        background-color: #D0D9FF; /* Gradient od jasnopomarańczowego do ciemniejszego pomarańczowego */
     }
 
     #main-content {
-        background-image: linear-gradient(to right, #799fe0 10%, #799fe0 10%); /* Gradient od jasnozielonego do ciemniejszego zielonego */
+        background-color: #D0D9FF; /* Gradient od jasnozielonego do ciemniejszego zielonego */
     }
     
         /* Pozostałe style */
