--- a/src/web/views/sites/admin/posts/index.ejs
+++ b/src/web/views/sites/admin/posts/index.ejs
@@ -5,6 +5,11 @@
     <script src="https://cdn.tiny.cloud/1/vzzkqptg02pahqialykt816tfqe57hjc1jbyoi9ubk3d6cmi/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title><%= siteName %></title>
+    <style>
+      body {
+          background-color: #D0D9FF; /* Gradient od fioletowego do niebieskiego */
+      }
+  </style>
 </head>
 <body>
 <script>
