--- a/src/web/views/sites/admin/snippets/index.ejs
+++ b/src/web/views/sites/admin/snippets/index.ejs
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body {
-            background-image: linear-gradient(to right, #6a11cb, #2575fc); /* Gradient od fioletowego do niebieskiego */
+            background-color: #D0D9FF; /* Gradient od fioletowego do niebieskiego */
         }
     </style>
 </head>
