--- a/src/web/views/sites/admin/users/index.ejs
+++ b/src/web/views/sites/admin/users/index.ejs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
       body {
-            background: linear-gradient(to right, #6a11cb 10%, #2575fc 60%); /* Przykład gradientowego tła */
+        background-color: #D0D9FF; /* Przykład gradientowego tła */
         }
         i {
             pointer-events: none;
