--- a/src/web/views/sites/blog/post.ejs
+++ b/src/web/views/sites/blog/post.ejs
@@ -16,6 +16,9 @@
 <body>
 <div class="container mt-5">
   <div class="row">
+    <div class="text-end">
+      <a href="/blog" class="btn btn-primary">Back</a>
+    </div>
     <div class="col-lg-8">
       <article>
         <header class="mb-4">
