--- a/src/web/views/sites/admin/addons/index.ejs
+++ b/src/web/views/sites/admin/addons/index.ejs
@@ -17,6 +17,9 @@
         <div class="col-12">
             <h1><%= siteName %> - Addons</h1>
         </div>
+        <div class="text-end">
+            <a href="/admin" class="btn btn-primary">Back</a>
+        </div>
     </div>
     <div class="row">
         <% addons.forEach((a) => { %>
